some minor styling fixes and adds the hamburger button style on mobile

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -24,12 +24,12 @@
 }
 .Main-bottom .message-input-button {
     box-sizing: border-box;
-    width:5rem;
-    height:5rem;
+    width:4.5rem;
+    height:4.5rem;
     border: 2px solid #a5a5a5;
     border-right:0px solid Transparent;
     border-radius: 5px 0 0 5px;
-    line-height:5rem;
+    line-height:4.5rem;
     font-size:3rem;
     color:#a5a5a5;
     text-align:center;
@@ -43,9 +43,9 @@
     width:100%;
     font-size:1.6rem;
     resize:none;
-    padding: 0 0 0 1rem;
-    line-height:5rem;
-    height:5rem;
+    padding: 0.2rem 0 0 1rem;
+    line-height:4.3rem;
+    height:4.5rem;
     outline:none;
 }
 
