--- a/src/Components/MainTop/MainTop.css
+++ b/src/Components/MainTop/MainTop.css
@@ -79,15 +79,25 @@
         top:1rem;
         right:1rem;
 
-        height:3rem;
+        height:3.5rem;
+        width:3.5rem;
         color:grey;
-        display:inline-block;
+        display:inline-flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         border:1px solid grey;
         box-sizing: border-box;
         border-radius:5px;
-        padding:0px 5px;
+        padding:0px 6px;
         font-size:1.4rem;
         text-decoration:none;
         cursor:pointer;
+    }
+    .mobile-hamburger-button > div {
+        width: 20px;
+        height: 3px;
+        background-color: grey;
+        margin: 2px 0;
     }
 }
