--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -25,11 +25,3 @@
     padding:0.5rem 1rem;
     cursor:pointer;
 }
-.Sidebar-chat-container li:hover {
-    /* background-color:#006600;
-    color:#00FF00; */
-}
-.active-section {
-    /* background-color:#006600;
-    color:#00FF00; */
-}
